Fixed the issue with white space at the bottom of the page. Updated grammar and spelling.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -28,12 +27,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-    line-height: 1.4;
-	font-family: 'Roboto', sans-serif;
-	background-color: darkgray;
-	background-image: url('./assets/photo-1555099962-4199c345e5dd.jpg');
-}
+
 ol, ul {
 	list-style: none;
 }
@@ -50,3 +44,11 @@ table {
 	border-spacing: 0;
 }
 
+body {
+    line-height: 1.3;
+	font-family: 'Roboto', sans-serif;
+	background-color: darkgray;
+	background-image: url('./assets/photo-1555099962-4199c345e5dd.jpg');
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
